--- a/html/register.html
+++ b/html/register.html
@@ -43,6 +43,20 @@
 										</div>
 									</div>
 									<div class="layui-form-item">
+										<label class="layui-form-label">昵称</label>
+										<div class="layui-input-block">
+											<input type="text" id="uname" required lay-verify="required"
+												placeholder="请输入昵称" autocomplete="off" class="layui-input">
+										</div>
+									</div>
+									<div class="layui-form-item">
+										<label class="layui-form-label">性别</label>
+										<div class="layui-input-block">
+										  <input type="radio" name="sex" id="man" value="男" title="男">
+										  <input type="radio" name="sex" id="women" value="女" title="女" checked>
+										</div>
+									  </div>
+									<div class="layui-form-item">
 										<label class="layui-form-label">密码</label>
 										<div class="layui-input-block">
 											<input type="password" id="password" required lay-verify="required"
@@ -63,7 +77,7 @@
 										</div>
 									</div>
 								</div>
-								<small>已有账号?</small><a href="loginManager.html" class="signup">&nbsp;登录</a>
+								<small>已有账号?</small><a href="loginUser.html" class="signup">&nbsp;登录</a>
 							</div>
 						</div>
 					</div>
