--- a/html/main.html
+++ b/html/main.html
@@ -38,16 +38,9 @@
 					<li class="layui-nav-item layui-nav-tree">
 						<a class="crm-menu" crmurl="/html/userManager/userList.html" href="javascript:;">用户管理</a>
 					</li>
-					<li class="layui-nav-item layui-nav-tree">
-						<a class="" href="javascript:;">基础管理</a>
-						<dl class="layui-nav-child">
-							<dd><a class="crm-menu" crmurl="customer/customerlist.html" href="javascript:;">用户管理</a>
-							</dd>
-							<dd><a class="crm-menu" crmurl="customer/customercontact.html" href="javascript:;">权限管理</a>
-							</dd>
-							<dd><a class="crm-menu" crmurl="customer/customercontact.html" href="javascript:;">模块管理</a>
-							</dd>
-						</dl>
+					<li class="layui-nav-item ">
+						<a class="crm-menu" crmurl="/html/comment/commentManage.html" href="javascript:;">评论管理</a>
+						
 					</li>
 					<li class="layui-nav-item"><a class="crm-menu" crmurl="service/servicelist.html"
 							href="javascript:;">销售管理</a></li>
