--- a/html/comment/commentManage.html
+++ b/html/comment/commentManage.html
@@ -1,4 +1,4 @@
-<div style="margin-top: 30px;">
+<div style="margin-top: 30px;margin-left: 20px;">
     <div class="layui-input-inline">
         <input type="text" id="content" lay-verify="title" autocomplete="off" placeholder="评论内容" class="layui-input">
     </div>
@@ -37,5 +37,6 @@
 <!-- 行工具栏-->
 <script type="text/html" id="toolUser">
     <a class="layui-btn-danger layui-btn-xs layui-btn" lay-event="delete">删除</a>
+    <a class="layui-btn layui-btn-xs layui-btn" lay-event="look">查看</a>
 </script>
 <script src="/js/comment.js"></script>
