--- a/html/userManager/addUser.html
+++ b/html/userManager/addUser.html
@@ -35,10 +35,10 @@
         <div class="layui-form-item">
             <label class="layui-form-label">性别</label>
             <div class="layui-input-block">
-              <input type="radio" name="sex" id="man" value="男" title="男">
-              <input type="radio" name="sex" id="women" value="女" title="女" checked>
+                <input type="radio" name="sex" id="man" value="男" title="男">
+                <input type="radio" name="sex" id="women" value="女" title="女" checked>
             </div>
-          </div>
+        </div>
 
         <div class="layui-form-item">
             <div class="layui-input-block">
@@ -49,9 +49,14 @@
     </form>
     <script src="/layui/layui.js" type="text/javascript" charset="utf-8"></script>
     <script type="text/javascript">
-        layui.use(['form', 'jquery','table'], function () {
+        layui.use(['form', 'jquery', 'table'], function () {
             var form = layui.form
             var $ = layui.jquery
+            $.ajaxSetup({
+                xhrFields: {
+                    withCredentials: true
+                }
+            });
             form.render()
             form.on('submit(btnAddUser)', function (data) {
                 if (form.verify()) {
@@ -60,6 +65,10 @@
                         type: 'POST',
                         dataType: 'JSON',
                         contentType: "application/json",
+                        xhrFields: {
+                            withCredentials: true
+                        },
+                        crossDomain: true,
                         data: JSON.stringify(data.field),
                         success: function (obj) {
                             var index = parent.layer.getFrameIndex(window.name); //先得到当前iframe层的索引
