我是付顶顶顶顶

--- a/html/main.html
+++ b/html/main.html
@@ -85,8 +85,7 @@
 						<a class="crm-menu" crmurl="/html/comment/commentManage.html" href="javascript:;">评论管理</a>
 
 					</li>
-					<li class="layui-nav-item"><a class="crm-menu" crmurl="service/servicelist.html"
-							href="javascript:;">销售管理</a></li>
+					<li class="layui-nav-item"><a class="crm-menu" crmurl="count/countAnaly.html" href="javascript:;">统计报表</a>
 				</ul>
 			</div>
 		</div>
