--- a/html/count/countAnaly.html
+++ b/html/count/countAnaly.html
@@ -1,4 +1,4 @@
-<div style="width: 100%;height: 100%;padding-left: 10%;padding-top: 5%;">
+<div style="width: 100%;height: 600px;padding-left: 10%;padding-top: 5%;">
 	<div style="width: 100%;height: 50%;">
 		<div id="pie1" style="width: 40%;height: 90%;float: left;">
         </div>
