--- a/html/tieba/tieBa.html
+++ b/html/tieba/tieBa.html
@@ -96,6 +96,23 @@ layui.use(['table','jquery'], function(){
     ]]
   });
   
+   table.on('toolbar(tab)',function(obj){
+	   if(obj.event=='search'){
+		table.reload('tab',{
+			where:{
+				word:$("#cusName").val()
+			},
+			page:{
+				curr:1
+			}
+		});
+	   }
+   })
+
+
+
+
+
   //监听事件
   table.on('tool(tab)', function(obj){
    // var checkStatus = table.checkStatus(obj.config.id);
